--- a/.github/workflows/generate_snake.yml
+++ b/.github/workflows/generate_snake.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: "0 0 * * *" # Génère l'animation chaque jour
   workflow_dispatch:
 
 jobs:
@@ -15,7 +17,16 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate Snake Animation
-        uses: Platane/snk@v2
+        uses: Platane/snk@v3
         with:
-          github_user_name: jkw301
-          output: github-contribution-grid-snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
+      - name: Push Snake files
+        uses: actions/upload-artifact@v3
+        with:
+          name: snake-files
+          path: dist/
